# pypsa-pl-mini

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/input/: annual_energy_flows;variant=historical.csv  capacity_utilisation;variant=historical.csv  installed_capacity;variant=historical_totals.csv  technology_carrier_definitions;variant=full.csv  technology_carrier_definitions;variant=mini.csv  technology_cost_data;variant=instrat_2024.csv
data/input/timeseries/: availability_profile;carrier=solar PV ground;year=2012.csv  availability_profile;carrier=solar PV ground;year=2013.csv  availability_profile;carrier=solar PV ground;year=2015.csv  availability_profile;carrier=solar PV roof;year=2012.csv  availability_profile;carrier=solar PV roof;year=2013.csv  availability_profile;carrier=solar PV roof;year=2015.csv  availability_profile;carrier=wind offshore;year=2012.csv  availability_profile;carrier=wind offshore;year=2013.csv  availability_profile;carrier=wind offshore;year=2015.csv  availability_profile;carrier=wind onshore;year=2012.csv  availability_profile;carrier=wind onshore;year=2013.csv  availability_profile;carrier=wind onshore;year=2015.csv  demand_profile;carrier=electricity final use;year=2012.csv  (+3 more)
notebooks/: pypsa_pl_mini_capex.ipynb  pypsa_pl_mini_opex.ipynb
scripts/: download_input_data.py
src/pypsa_pl_mini/: build_network.py  custom_constraints.py  custom_statistics.py  define_time_dependent_attributes.py  helper_functions.py  make_time_profiles.py  optimise_network.py  plot_outputs.py  plots.py  process_output_network.py
(+44 files in other folders)
